# capturly

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  coverage.md  getting-started.md  modes.md
docs/superpowers/plans/: 2026-07-21-phase-0-handoff.md
src/capturly/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  handler.py  logger.py  proxy.py  server.py  sse.py  storage.py  utils.py
src/capturly/inspection/: __init__.py  agui.py  openai.py
src/capturly/modes/: __init__.py  hybrid.py  log.py  record.py  replay.py
tests/: conftest.py  test_agui_combiner.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_integration.py  test_inspection.py  test_inspection_integration.py  test_integration.py  test_logger.py  test_modes.py  test_phase1_integration.py  test_proxy.py  test_sse_integration.py  test_storage.py
