[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capturly"
version = "0.1.0"
description = "Record, replay, and debug any HTTP API — with built-in AI traffic intelligence"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Vikrant", email = "vikrant82@gmail.com" }
]
keywords = ["api", "debug", "proxy", "record", "replay", "mock", "testing", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "cryptography>=41.0.0",  # For TLS cert generation
    "pyyaml>=6.0",  # For capturly.yaml config file support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
capturly = "capturly.cli:main"

[project.urls]
Homepage = "https://github.com/vikrant82/capturly"
Repository = "https://github.com/vikrant82/capturly"
Issues = "https://github.com/vikrant82/capturly/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/capturly"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
